# ss3cli

./: .cursorignore  README.md  config.ini.example  setup.cfg
ss3cli/: __main__.py  s3_client.py
ss3cli/cli/: cp.py  ls.py  presign.py  rm.py
