[metadata]
name = simple-s3-cli
version = 0.1.0
author = Your Name
author_email = your@email.com
description = A simple S3 CLI for S3-compatible storage
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-username/simple-s3-cli
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    boto3
    tqdm
    botocore

[options.entry_points]
console_scripts =
    ss3 = ss3cli.__main__:main
